--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ navbar-links:
     - Accomodation: "accommodation"
     - Sponsors: "sponsors"
     - Venue: "map"
-    - Student prices: "prices"
+    - Student prizes: "prizes"
   Resources:
     - Contact us: "contact"
     - AES Constitution: "constitution"
