--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ navbar-links:
     - Overview: "conference"
     - Registration: "registration"
     - Venue: "map"
-    - Student prizes: "prizes"
+    - Early Career & Sudent Awards: "prizes"
     - Accomodation: "accommodation"
     - Sponsors: "sponsors"
    
