--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ navbar-links:
     - Overview: "conference"
     - Registration: "registration"
     - Venue: "map"
-    - Early Career & Sudent Awards: "prizes"
-    - Accomodation: "accommodation"
+    - Awards: "prizes"
+    - Accommodation: "accommodation"
     - Sponsors: "sponsors"
    
   Resources:
