--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ navbar-links:
   Resources:
     - Contact us: "contact"
     - AES Constitution: "constitution"
-    - AES 2014 AGM Minutes: docs/aes_agm_2014.pdf
+    - AES 2014 AGM Minutes: "requestMins.md" #docs/aes_agm_2014.pdf
     - Useful Links: "links"
 
 # Image to show in the navigation bar - image must be a square (width = height)
