--- a/_config.yml
+++ b/_config.yml
@@ -32,9 +32,10 @@ navbar-links:
   Resources:
     - Contact us: "contact"
     - AES Constitution: "constitution"
-    - AES 2014 AGM Minutes: "requestMins.md" #docs/aes_agm_2014.pdf
-    - Useful Links: "links"
-
+    - AES 2014 AGM Minutes: "requestMins.md"  
+    - Useful Links: "links"      
+    
+# docs/aes_agm_2014.pdf  removed from resources
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
 avatar: "/img/avatar-icon.png"
