--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,8 @@ navbar-links:
 # docs/aes_agm_2014.pdf  removed from resources
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+#avatar: "/img/avatar-icon.png"
+avatar: "/img/AES_logo1.png"
 
 # --- Footer options --- #
 
