Tom Keaney: new tab on nav bar for 2022 grants

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ navbar-links:
   News: "news"
   Blog: "blog"
   Join!: "join"
+  ECR Grants: "ECR_grants_2022"
   Opportunities: "jobs"
   Conference: 
     - Overview: "conference"
