--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,11 @@ navbar-links:
     - Program: "Program_2022"
     - Venue: "Venue_2022"
     - Social: "social_events_2022"
+    - Online: "online_2022"
    # - Research Excellence Awards: "excellence_awards"
     #- Local Dinners: "food" 
     #- Awards: "prizes"
-    - Accommodation: "accommodation"
+    - Accom: "accommodation"
    
   Resources:
     - Contact us: "contact"
