--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ navbar-links:
   Opportunities: "jobs"
   Conference: 
     - Overview: "2023_conference"
-    # - Program: "Program_2022"
+    # - Program: "pages/conference_2020"
     # - Venue: "Venue_2022"
     # - Social: "social_events_2022"
     # - Online: "online_2022"
@@ -43,8 +43,8 @@ navbar-links:
 # docs/aes_agm_2014.pdf  removed from resources
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-#avatar: "/img/avatar-icon.png"
-avatar: "/img/AES_logo1.png"
+# avatar: "/img/avatar-icon.png"
+# avatar: "/img/AES_logo1.png"
 
 # --- Footer options --- #
 
