--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ navbar-links:
     # - Research Excellence Awards: "excellence_awards"
     #- Local Dinners: "food" 
     #- Awards: "prizes"
-    - Accom: "accommodation"
+    - Accom: "2023_accommodation"
    
   Resources:
     # - Opportunities: "jobs"
