--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ navbar-links:
   Blog: "blog"
   Join!: "join"
   Contact us: "contact"
-  # ECR Grants: "ECR_grants_2022"
+  ECR Grants: "excellence_awards"
   Conference: 
     # - Overview: "2023_conference"
     - Registration: "registration"
@@ -32,7 +32,7 @@ navbar-links:
     # - Online: "online_2022"
     # - Research Excellence Awards: "excellence_awards"
     #- Local Dinners: "food" 
-    #- Awards: "prizes"
+    # - Awards: "prizes"
     - Accom: "2023_accommodation"
    
   Resources:
