--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ navbar-links:
     - Program: "programme"
     # - Venue: "Venue_2022"
     # - Social: "social_events_2022"
-    # - Online: "online_2022"
+    - Online: "2023_online"
     # - Research Excellence Awards: "excellence_awards"
     #- Local Dinners: "food" 
     # - Awards: "prizes"
