AGM agenda for 2024

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ navbar-links:
   News: "news"
   Blog: "blog"
   ECR Grants: "excellence_awards"
-  # Join!: "join"
+  Join!: "join"
   Contact us: "contact"
   Conference: 
     # - Overview: "2023_conference"
