--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
 url: "http://ausevo.github.io"
-baseurl: "/ausevo.github.io"
+baseurl: ""
 
 # Name of website
 title: Australasian Evolution Society
