--- a/_config.yml
+++ b/_config.yml
@@ -57,8 +57,9 @@ navbar-links:
 author:
   name: Australasian Evolution Society
   email: "austevolutionsociety@gmail.com"
-  facebook: groups/95240533874/  # eg. daattali
+  facebook: austevolsoc.bsky.social #groups/95240533874/  # eg. daattali
   twitter: austevolsoc   # eg. daattali
+
   github: https://github.com/ausevo/ausevo.github.io
 
 # Select which links to show in the footer
