template for 2025 ecr grant and update page for grant

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ navbar-links:
   About: " "
   News: "news"
   Blog: "blog"
-  # ECR Grants: "ECR_grants_2022"
+  ECR Grants: "2025_ECR_grants"
   Join!: "join"
   Contact us: "contact"
   Conference: 
