update and archive for 2025 conference grant announcement

--- a/_config.yml
+++ b/_config.yml
@@ -26,13 +26,13 @@ navbar-links:
   Conference: 
     # - Past conferences: "conferences_general"
     - Registration: "registration"
-    - Program: "programme"
-    - Venue: "2024_Venue"
-    - Accom: "2024_accom"
+    # - Program: "programme"
+    # - Venue: "2024_Venue"
+    # - Accom: "2024_accom"
     # - Social: "social_events_2022"
     # - Online: "2023_online"
     # - Local Dinners: "food" 
-    - Research Excellence Awards: "2024_research_awards"
+    # - Research Excellence Awards: "2024_research_awards"
     # - Awards: "prizes"
     # - Getting-there: "2023_accommodation"
     - Past Conferences: "past-conf"
