--- a/_config.yml
+++ b/_config.yml
@@ -32,10 +32,11 @@ navbar-links:
     # - Social: "social_events_2022"
     # - Online: "2023_online"
     # - Local Dinners: "food" 
-    # - Research Excellence Awards: "2024_research_awards"
+    - Research Excellence Awards: "2025_research_awards"
     # - Awards: "prizes"
     # - Getting-there: "2023_accommodation"
     - Past Conferences: "past-conf"
+    - Past ECR Awards Winners: "previous_winners"
    
   Resources:
     # - Opportunities: "jobs"
